Feature: Add new styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,13 @@
 
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins|Roboto:300,400&display=swap');
+//Metrics
+$metric-x-small: 10px;
+$metric-small: 20px;
+$metric-base: 30px;
+$metric-medium: 40px;
+$metric-large: 60px;
+$metric-x-large: 90px;
+$metric-xx-large: 10px;
 
 //Colors
 $product--color: #3146ff;
@@ -7,18 +15,64 @@ $text--color: #000000;
 $background--color: #F7F7F7;
 $secondary--color: #01FFCB;
 
-//Texts
+//Fonts
+$font-roboto: 'Roboto', sans-serif;
+$font-poppins: 'Poppins', sans-serif; 
+
+//Styles
+%big-headline-text {
+  font-family: $font-poppins;
+  font-weight: bold;
+color: #000;
+  font-size: 70px;
+  line-height: 80px;
+
+
+}
 
 
 
+h2 {
+  font-family: $font-poppins;
+  font-weight: bold;
+  color: #000;
+  font-size: 30px;
+  line-height: 40px
+}
 
-html {
-  box-sizing: border-box;
-  margin-block: 0 20 0 20 
- }
- *, *:before, *:after {
-  box-sizing: inherit;
- }
+h3 {
+  font-family: $font-poppins;
+  font-weight: bold;
+  color: #000;
+  font-size: 19px;
+  line-height: 26px
+}
+
+p {
+  font-family: $font-roboto;
+  color: #000;
+  font-size: 17px;
+  line-height: 25px
+}
+
+.description-text {
+  font-family: $font-roboto;
+  color: $text--color;
+  font-size: 30px;
+  line-height: 40px;
+}
+
+.headline {
+  @extend %big-headline-text;
+  
+}
+
+.headline__hero {
+  @extend %big-headline-text;
+    color: $product--color;
+  }
+
+
 .zonifero__name {
   color: #000000;	
   font-family: Poppins;	
@@ -47,8 +101,31 @@ html {
 
 .header__top--rightText{
   color: #FFFFFF;	
-  font-family: 'Roboto', sans-serif;;	
+  font-family: $font-roboto;	
   font-size: 17px;
   position: relative;
 position: 50px 150px 16px 60px  
+}
+
+.buttonText{
+  font-family: $font-roboto;
+  font-size: 17px;
+}
+
+.card {
+  margin: 60px 60px;
+}
+
+.tab {
+  cursor: pointer;
+  font-family: $font-roboto;
+  font-size: 17px;
+
+a:active{
+  font-family: $font-roboto;
+  font-weight: bold;
+border-color: #01FFCB;
+margin-top: 4px;
+
+}
 }
