--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -67,14 +67,30 @@ $font-poppins: "Poppins", sans-serif;
 }
 
 html {
-  margin: 20px;
+  margin: 0 20px 20px 20px;
+}
+body{
+  margin: 0;
 }
 .headline {
   @extend %big-headline-text;
 }
+.parentheader{
 
+  width: 100%;
+  position: relative;
+}
+.parentheader__fixed{
+  position: fixed;
+  z-index: 100;
+  height: 200;
+  background-color: #FFFFFF;
+  width: 100%;
+  padding: 0;
+
+  
+}
 .header {
-  position: sticky;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -186,6 +202,7 @@ html {
   background-image: url("/public/images/first_section_bg.png");
   display: grid;
   height: 778px;
+  padding-top: 400px;
   background-position: center;
   grid-template-columns: 350px repeat(3, 1fr);
   grid-template-rows: auto;
