--- a/src/styles/metrics.scss
+++ b/src/styles/metrics.scss
@@ -27,7 +27,7 @@ $font-poppins: "Poppins", sans-serif;
   line-height: 80px;
 }
 
-%buttonText {
+%button-text {
   font-family: $font-roboto;
   font-size: 17px;
   font-weight: 400;
