--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,348 +1,18 @@
-@import './metrics.scss';
-
-@mixin mobile {
-
-  @media (max-width: 1000px) { @content };
-
-};
-
-@mixin desktop {
-  @media (min-width: 1000px) { @content }
-};
-
-@mixin small-desktop {
-  @media (min-width: 1000px) { @content }
-};
+@import "./metrics.scss";
+@import "./media-res.scss";
+@import "./header.scss";
+@import "./hero-section.scss";
 
 html {
   margin: 0 20px 20px 20px;
 
-  @include mobile(){
-      margin: 0;
-    };
-};
-
-body{
-  margin: 0;
-
-}
-.headline {
-  @extend %big-headline-text;
-}
-.parentheader{
-  width: 100%;
-  position: relative;
-  @include mobile(){
-    position: relative;
-  }
-
-}
-.parentheader__fixed--desktop{
-  position: fixed;
-  z-index: 100;
-  height: 200px;
-  width: 100%;
-  padding: 0;
-  background-color: white;
-  @include mobile(){
-    display: none;
-  }
-  
-}
-
-.parentheader__fixed--mobile{
-  display: none;
-  @include mobile(){
-      height: 8vh;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      margin: 0 20px;
-  }
-}
-
-
-.header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header__container {
-  min-width: 50%;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.logo {
-  width: 350px;
-  @include mobile(){
-    display: inline; 
-  }
-}
-
-.header__list {
-  @extend %project__p;
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-  display: flex;
-  flex-wrap: wrap-reverse;
-  flex-direction: row;
-  justify-content: space-between;
-  font-family: $font-roboto;
-  font-size: 13px;
-  width: 255px;
-}
-
-.header__pointing {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-}
-
-.header__globe-arrow-container{
-  display: flex;
-  flex-direction: row
-}
-
-.header__mobile-container{
-  display: flex; flex-direction: row; align-items: center;
-}
-
-.header__globe {
-  height: $metric-small;
-  width: $metric-small;
-}
-.header__arrow {
-  height: $metric-x-small;
-  width: $metric-x-small;
-  position: relative;
-  top: $metric-x-small;
-  left: 5px;
-  @include mobile(){
-    display: inline;
-    top: 0;
-  }
-
-  
-}
-
-.header__signIn {
-  @extend %buttonText;
-}
-
-.header__getApp {
-  @extend %buttonText;
-  box-sizing: border-box;
-  background: #3146ff;
-  color: #f7f7f7;
-  height: 80px;
-  width: 30% ;
-  display: flex;
-  align-items: center;
-  padding-left: 3vw;
-}
-
-.header__hamburger{
-  @include mobile(){
-  color: $product--color;
-  height: 1rem;
-
-}}
-
-.navigation {
-  @extend %project__h3;
-  font-weight: 400;
-  display: flex;
-  flex-wrap: wrap;
-  width: 60vw;
-  padding: 0 0 0 350px;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: baseline;
-  text-decoration: none;
-}
-
-.navigation__ul {
-  padding: 0;
-  list-style-type: none;
-}
-
-.navigation__link {
-  position: relative;
-  text-decoration: none;
-  color: #000;
-  &:hover {
-    font-weight: bold;
-  }
-  &:active {
-    font-weight: bold;
-    width: 33px;
-    &::after {
-      content: "";
-      position: absolute;
-      display: block;
-      width: 33px;
-      height: 4px;
-      background-color: $secondary--color;
-    }
-  }
-}
-.navigation__paragraph{
-  font-family: $font-roboto;
-  color: #000000;
-  font-size: 15px;
-  line-height: 27px;
-  margin-right: 20px;
-  font-weight: 400;
-
-  }
-
-.hero {
-  position: relative;
-  display: grid;
-  padding-top: 180px;
-  background-color: $background--color;
-
-  @include mobile(){
-    padding: 0;
-grid-template-columns: 1fr;
-grid-template-rows: 30vmax 600px 400px 40vw;
-grid-template-areas:
-  "articletitle"
-  "decoration"
-  "articledescription"
-  "adventage"
-}
-    @include desktop(){
-      grid-template-columns: minmax(10%, 350px) 1fr 1.5fr;
-      grid-template-rows: 350px 350px 1fr;
-      grid-template-areas:
-        ". articletitle decoration"
-        ". articledescription decoration"
-        ". adventage adventage";
-        @include small-desktop(){
-          grid-template-rows: 350px minmax(350px, 1fr) 1fr;
-        }
-    
-    }
-
- 
-}
-
-.hero__style {
-  grid-area: decoration;
-  position: relative;
-  padding-top: $metric-large;
-  background-color: $background--color;
-  background-image: url("/public/images/first_section_bg.png");
-  background-position: bottom right;
-  object-fit: cover;
-  @include mobile(){
-    padding: 0;
-    
-  }
-  
-}
-.hero__phone {
-  margin: none;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-start;
-  margin-left: 10vw;
-  @include mobile(){
-    padding: 0;
-    justify-content: center;
-    align-items: flex-start;
-
-
-  }
-}
-
-.hero__bigText {
-  grid-area: articletitle;
-  @extend %big-headline-text;
-  color: $product--color;
-  margin: $metric-medium 0;
-  position: relative;
-  top: 10vh;
-  @include mobile(){
-    background-color: $background--color;
-    margin: 0 0 20px 20px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-}
-
-
-
-.hero__description {
-  grid-area: articledescription;
-  position: relative;
-  margin: $metric-small 0;
-  @extend %description-text;
-  @include mobile(){
+  @include mobile() {
     margin: 0;
-    background-color: white;
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
   }
 }
 
-.hero__application {
-
-
-  @include mobile(){
-    display: flex;
-    justify-content: center;
-  }
-}
-.hero_application--platform {
-  margin: $metric-small $metric-x-small $metric-x-small 0;
-  height: 70px;
-  @include mobile(){
-    margin: 10px 5vw 10px 5vw;
-  }
+body {
+  margin: 0;
 }
 
-.adventages {
-  grid-area: adventage;
-  background: #f7f7f7;
-  z-index: 90;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
- opacity: 1;
 
-  &__card {
-    @extend %project_card;
-    margin-left: 0;
-    &--header {
-      @extend %project__h2;
-      margin-top: 0;
-    }
-    &--paragraph {
-      @extend %project__p;
-    }
-    @include mobile(){
-      margin: 0;
-      width: 100%;
-      padding: 20px;
-      background-color: white;
-    }
-  }
-
-}
-@include mobile(){
-
-  .adventages{
-    flex-direction: column;
-  }
-  }
