Feature: Responsivness fixing

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -20,13 +20,20 @@
 .parent-header__navigation-mobile {
   display: none;
   @include mobile() {
-    height: 8vh;
+    position: fixed;
+    height: 100px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 0 20px;
-  }
+    left: 0;
+    right: 0;
+    z-index: 999;
+    background: white;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0 10px;
+}
 }
 
 .main-header {
