--- a/src/styles/metrics.scss
+++ b/src/styles/metrics.scss
@@ -65,3 +65,27 @@ $font-poppins: "Poppins", sans-serif;
 %project_card {
   margin: 60px 60px;
 }
+
+%link_styler{
+  position: relative;
+  @extend %project__h3;
+  font-family: $font-roboto;
+  text-decoration: none;
+  font-weight: 400;
+  color: #000;
+  &:hover {
+    font-weight: bold;
+  };
+  &:active {
+    font-weight: bold;
+    width: 33px;
+    &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 33px;
+      height: 4px;
+      background-color: $secondary--color;
+    }
+  }
+}
