--- a/src/styles/hero-section.scss
+++ b/src/styles/hero-section.scss
@@ -17,7 +17,7 @@
   }
 
   @include mobile-small(){
-    grid-template-rows: 40vmax 600px 600px 40vw;
+    grid-template-rows: 400px 600px 600px 40vw;
   }
 
   @include desktop() {
@@ -29,7 +29,7 @@
       ". adventage adventage";
       
     @include small-desktop() {
-      grid-template-rows: 350px minmax(350px, 1fr) 1fr;
+      grid-template-rows: 400px minmax(350px, 1fr) 1fr;
     }
   }
 
